- Added Firestore logins - Bug in displaying user details on home page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".StudentHome" />
         <activity android:name=".TestPage" />
+        <activity android:name=".Signup" />
     </application>
 
     <dist:module dist:instant="true" />
