--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
 
     <dist:module dist:instant="true" />
 
+    <uses-sdk android:minSdkVersion="21"
+        android:targetSdkVersion="Q"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/mathest_logo"
