--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
         android:roundIcon="@mipmap/mathest_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdditionWorkspace"
-            android:windowSoftInputMode="stateHidden"></activity>
+        <activity android:name=".MultiplicationWorkspace"></activity>
+        <activity
+            android:name=".AdditionWorkspace"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".LaunchScreen"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -28,16 +30,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".StudentHome" />
-        <activity android:name=".TestPage"
-            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".TestPage"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Login"
-            android:windowSoftInputMode="stateHidden"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".Signup"
-            android:windowSoftInputMode="stateHidden"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".StudentProfile" />
     </application>
 
