--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/mathest_logo"
+        android:icon="@mipmap/mathest_new"
         android:label="@string/app_name"
         android:usesCleartextTraffic="true"
-        android:roundIcon="@mipmap/mathest_logo"
+        android:roundIcon="@mipmap/mathest_new_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MultiplicationWorkspace"
